# nix-dev

./: .gitignore  LICENSE  README.md  flake.nix
.github/workflows/: ci.yml  update-lock.yml
devshells/: ansible-k3s.nix  default.nix  hugo.nix  python.nix  python311.nix  terraform.nix
examples/python-app/: pyproject.toml
examples/python-app/src/example_app/: __init__.py
lib/: mkDevShell.nix  mkPythonApp.nix  mkUvShell.nix
templates/ansible-k3s/: flake.nix
